front-end/project-front-end/css/style.scss
body {
  padding: 0;
  margin: 0; }

.marker {
  width: 50px;
  height: 35px; }

.all-animals {
  display: flex;
  flex-wrap: wrap;
  padding-top: 10px;
  justify-content: space-around;
  background-color: #E9EBF8; }

.filtered-animals {
  display: flex;
  flex-wrap: wrap;
  padding-top: 10px;
  justify-content: space-around;
  background-color: #E9EBF8; }

.animal-background {
  background-color: #E9EBF8; }

.animals {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around; }

.animal-card {
  margin: 5px;
  height: 600px;
  width: 410px;
  justify-content: space-around;
  border: solid #7bb2d9;
  border-radius: 15px 50px;
  overflow: auto;
  justify-content: center;
  background-color: white; }

.animal-card:hover {
  position: relative;
  top: -10px;
  border-color: #339989; }

.animal-images {
  margin: 0;
  height: 20pc;
  width: 20pc;
  object-fit: scale-down;
  margin-left: 40px;
  margin-right: auto; }

.map {
  display: flex;
  justify-content: space-around; }

.p-tag {
  display: flex;
  flex-wrap: wrap;
  font-family: "Red Hat Display", sans-serif;
  font-size: 150%; }

.header-three {
  font-family: "Hind Madurai", sans-serif;
  font-size: 175%;
  padding-left: 40px; }

.header-four {
  font-family: "Hind Madurai", sans-serif;
  font-size: 150%;
  padding-left: 40px; }

.header-five {
  font-family: "Hind Madurai", sans-serif;
  font-size: 150%;
  padding-left: 70px; }

.fish {
  display: transparent;
  height: auto;
  width: auto;
  background-image: url("https://photos.app.goo.gl/qiPrQULUgfUbocsv9");
  background-size: cover;
  background-position: center; }

.main-header {
  text-align: center; }

.animal-header {
  text-align: center;
  padding-bottom: 10px; }

.animal-link {
  font-family: "Merriweather Sans", sans-serif;
  font-size: 155%;
  color: #2A2B2A;
  text-decoration: none; }

.link {
  font-family: "Merriweather Sans", sans-serif;
  font-size: 175%;
  color: #2A2B2A;
  text-decoration: none; }

.home-page {
  display: flex;
  flex-flow: column;
  padding-top: 30px; }

.button {
  font-family: "Merriweather Sans", sans-serif;
  font-size: 125%;
  border-radius: 10%;
  background-color: #B8E0D2; }

.button:active {
  color: #B8E0D2; }

.header-three-login {
  font-family: "Red Hat Display", sans-serif;
  font-size: 125%; }

.home-section {
  border: solid;
  border-radius: 15px 50px;
  margin: 10px;
  padding: 10px;
  text-align: center; }

.marker-btn {
  background: none;
  border: none; }

.marker-btn:hover {
  position: relative;
  top: -5px; }

.popup {
  display: grid;
  width: 50%; }

.title {
  text-align: center;
  font-family: "Hind Madurai", sans-serif;
  font-size: 450%;
  margin-top: 40px; }

.map-link {
  text-decoration: none;
  font-family: "Merriweather Sans", sans-serif;
  font-size: 150%;
  color: #2A2B2A;
  background-color: #B8E0D2;
  border-radius: 10px; }

.map-link:hover {
  opacity: .4; }

.map {
  margin-top: 30px;
  border: solid;
  border-color: #0E34A0;
  border-radius: 15px 50px; }

.react-map {
  border-radius: 12px 46px; }

.notes-container {
  display: flex;
  flex-wrap: wrap-reverse;
  padding-top: 40px;
  background-color: #F1E4F3;
  width: 1500px; }

.new-notes-container {
  justify-content: center;
  padding-top: 5px;
  background-color: #F1E4F3;
  width: 1500px; }

.notess-header {
  display: visible; }

.notes-card {
  margin: 5px 5px 5px 5px;
  height: 200px;
  width: 410px;
  justify-content: space-around;
  overflow-y: scroll;
  border: solid #5BBA6F;
  border-radius: 15px 50px;
  justify-content: center;
  text-align: center;
  background-color: white; }

.header-two {
  text-align: center; }

.input {
  font-size: 10px; }

.notes-p-tag {
  display: flex;
  flex-wrap: wrap;
  font-family: "Red Hat Display", sans-serif;
  font-size: 150%;
  width: 400px;
  text-align: center; }

.region-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  background-color: #DCEAB2; }

.region-card {
  flex-flow: wrap;
  margin: 5px;
  height: 400px;
  width: 410px;
  justify-content: space-between;
  border: solid #7bb2d9;
  border-radius: 15px 50px;
  overflow: auto;
  justify-content: center;
  background-color: white; }

.region-card:hover {
  position: relative;
  top: -10px; }

.region-header-three {
  text-align: center;
  font-family: "Hind Madurai", sans-serif;
  font-size: 175%;
  color: black;
  opacity: 1; }

.p-tag {
  justify-content: space-around;
  padding-left: 70px;
  padding-right: 70px; }

.region-header-five {
  text-align: center;
  justify-content: flex-start;
  font-family: "Hind Madurai", sans-serif;
  font-size: 150%; }

/*# sourceMappingURL=style.scss.map */

